--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "your-name-here/Autobake",
+    "name": "ivyhjk/Autobake",
     "description": "Autobake plugin for CakePHP",
     "type": "cakephp-plugin",
     "require": {
